--- a/sites/all/themes/arabiyya/css/arabiyya.styles.css
+++ b/sites/all/themes/arabiyya/css/arabiyya.styles.css
@@ -5,6 +5,16 @@ body{
   letter-spacing: 0;
 }
 
+@media (max-width: 600px) {
+  #admin-menu{
+    display:none;
+  }
+  html body.admin-menu {
+    margin-top: 0px !important;
+  }
+}
+
+
 .l-header{
   margin-bottom:10px !important;
   text-align: center;
@@ -50,17 +60,9 @@ body{
   width:100%;
   height:100px;
   position:absolute;
-  top:-60px;
+  top:0px;
   left:0;
   margin-bottom: 0;
-}
-
-.slides li .views-field h2.active-slide{
-  top:0px;
-  -webkit-transition:all .5s ease-in-out;
-  -moz-transition:all .5s ease-in-out;
-  -o-transition:all .5s ease-in-out;
-  transition:all .5s ease-in-out;
 }
 
 .slides li .views-field h2:hover{
